[package]
name = "rioco"
version = "0.1.0"
edition = "2024"


[lib]
name = "basic_event_loop"
path = "src/lib.rs"

[[bin]]
name = "echo_server"
path = "src/main.rs"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
log = "0.4"
simple_logger = "4.0"
tokio = {version = "1.45.0", features= ["full"]}
